--- a/Ejemplos/modelo2021.html
+++ b/Ejemplos/modelo2021.html
@@ -10,9 +10,9 @@ fecha: Octubre 2021
 -->
 
 <head>
-	<meta charset="UTF-8"/>
+	<meta charset="UTF-8"/><!-- para las nomenglaturas de cada una de los lenguajes-->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
+      <!-- vuelve al zoom de la pagina normal-->
 	<!-- polyfill para soportar CSS3 Media Queries en MS explorer viejos -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  <!--[if lt IE 9]>
