--- a/Lenguaja de marcas/Cajas-Paso1.html
+++ b/Lenguaja de marcas/Cajas-Paso1.html
@@ -18,13 +18,14 @@
 		{background-color: rgb(54, 67, 189);
 			height: 70px;
 			width: 250px;
-			border-style: dotted;
+			border-style: solid;
 		}	
 
 
 		h4 {background-color: rgb(197, 18, 72);
 			height: 50px;
 			width: 50px;
+			border-style: solid;
 
 	
 			
@@ -34,6 +35,7 @@
 		h6{background-color: rgb(197, 230, 14);
 			height: 150px;
 			width: 400px;
+			border-style: solid;
 		}
 
 
