--- a/Lenguaja de marcas/mIprmerapagina.html
+++ b/Lenguaja de marcas/mIprmerapagina.html
@@ -2,29 +2,40 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>1ºpaginaweb</title>
-	</head>
-    <body>
-        <h1>Mi Primera Pagina Web</h1>
-        <h2>por Alejandro Lopez</h2>
-        <p>Mi nombre es alejadro lopez gomez, tengo 2 hijos, Alejandro Lopez Salinas de 4 años y Lucia Lopez Salinas de nuebe años.Son muy buenos estudiantes, les gusta jugar,son un poquito trabiesillos y son lo mejor de mi vida.
-            <br/> - Lo primero es CONFIAR EN TI MISMO. Confía en ti mismo sin importar los que los demás piensen
+</head>
 
-            2 - Lo segundo que debes hacer es ROMER ALGUNAS NORMAS. Tenemos demasiadas normas en la vida para casi todo </p>
-       <style>
-           h1 {
-               text-align: center;
-          }
+<body>
+    <h1>Mi Primera Pagina Web</h1>
+    <h2>por Alejandro Lopez</h2>
+    <p>Mi nombre es alejadro lopez gomez, tengo 2 hijos, Alejandro Lopez Salinas de 4 años y Lucia Lopez Salinas de
+        nuebe años.Son muy buenos estudiantes, les gusta jugar,son un poquito trabiesillos y son lo mejor de mi vida.
+        <br/> - Lo primero es CONFIAR EN TI MISMO. Confía en ti mismo sin importar los que los demás piensen
+        2 - Lo segundo que debes hacer es ROMER ALGUNAS NORMAS.
+        <br/> Tenemos demasiadas normas en la vida para casi
+        todo Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, delectus aspernatur non repellendus
+        libero vel facilis quibusdam adipisci accusamus reiciendis pariatur, architecto culpa incidunt sapiente alias
+        laborum ipsa? Ipsa, placeat.
+    </p>
+    <style>
+        h1 {
+            text-align: center;
+            background-color: rgb(4, 248, 228);
+        }
 
-          h2{ 
-              text-align: right;
-          }
+        h2 {
+            text-align: right;
+            background-color: rgb(4, 248, 228);
+        }
 
-          p{ text-justify: auto;
-            
-          }
-       </style> 
+        p {
+            text-justify: auto;
+            background-color: rgb(4, 248, 228);
 
-    </body>
+        }
+    </style>
+
+</body>
+
 </html>
