--- a/Ejemplos/modelo2021xtgtml.xhtml
+++ b/Ejemplos/modelo2021xtgtml.xhtml
@@ -1,5 +1,8 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="es" xml:lns="http://www.w3.org/1999/xhtml">
 <!DOCTYPE html>
-<html lang="es">
+<html >
 
 <!--
 HTML
@@ -72,20 +75,12 @@ fecha: Octubre 2021
 	
 	<!-- bloque de contenido de la pagina -->
 	<main>
-		<article>
-			<h2>Titulo de este articulo</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem itaque debitis praesentium, harum eos ipsum, sit quibusdam laboriosam beatae eaque magni. Quidem doloremque tenetur cupiditate modi odit deserunt odio?
-			</p>
-			 
-		</article>
+		<article></article>
         <!-- aside se usa para contenido complementario y generalmente se muestra como una columna lateral pero podemos darle estilo -->
 		<aside></aside>
 
 	</main>
-    <article>
-		<h3>Titulo de este articulo</h3>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae dolor, quidem, odio repudiandae debitis aliquid, quod similique blanditiis tenetur deleniti minima sit delectus. Eligendi nihil perspiciatis dolor ducimus, iste cumque.</p>
-	</article>
+    <article></article>
 
 
 	<!-- pie de pagina -->
