--- a/Modelos/modelo2021-xhtml.xhtml
+++ b/Modelos/modelo2021-xhtml.xhtml
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
+<?xml version="1.0"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="es" xml:lang="es" xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-HTML
+XHTML
 web o pagina:
 entorno: curso LENG MARCAS
 autor: Carlos Boni
@@ -10,22 +12,22 @@ fecha: Octubre 2021
 -->
 
 <head>
-	<meta charset="UTF-8"/><!-- para las nomenglaturas de cada una de los lenguajes-->
+	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-      <!-- vuelve al zoom de la pagina normal-->
+
 	<!-- polyfill para soportar CSS3 Media Queries en MS explorer viejos -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	  <!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	  <![endif]-->
 	  
 	<!-- importante SEO para la etiqueta del navegador -->
-	<title>Titulo en Etiqueta del Navegador</title>
+	<title>XHTML - modelo de partida</title>
 	
 	<!-- una fuente de Google, mejor en CSS -->
 	<link rel="preconnect" href="https://fonts.gstatic.com"/>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet"/>
+	<!-- <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet"/> -->
 	
 	<!-- una hoja de estilos externa-->
 	<link href="https://miweb.com/00-modelo.css" rel="stylesheet" type="text/css"/>
@@ -65,33 +67,33 @@ fecha: Octubre 2021
 
 	<!-- cabecera de pagina -->
 	<header>
-		<h1>MODIFICADO EN GITHUB.COM</h1>
-		<h2>... y vuelto a cambiar en localhost </h2>
+		<h1>XHTML - modelo de partida</h1>
+		<h2> recordar actualizar el header y el titulo de la etiqueta </h2>
 		<br/>
 	</header>
 	
-	<!-- bloque de contenido de la pagina -->
+	<!-- bloque de contenido principal de la pagina -->
 	<main>
 		<article>
-			<h2>Titulo de este articulo</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem itaque debitis praesentium, harum eos ipsum, sit quibusdam laboriosam beatae eaque magni. Quidem doloremque tenetur cupiditate modi odit deserunt odio?
-			</p>
-			 
+			<h2>Articulo destacado de esta pagina</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus quae aperiam tenetur hic harum placeat enim nobis voluptatem accusantium ut fugiat, quam possimus architecto, laudantium iste impedit consectetur. Officia.</p>
 		</article>
         <!-- aside se usa para contenido complementario y generalmente se muestra como una columna lateral pero podemos darle estilo -->
 		<aside></aside>
 
 	</main>
-    <article>
-		<h3>Titulo de este articulo</h3>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae dolor, quidem, odio repudiandae debitis aliquid, quod similique blanditiis tenetur deleniti minima sit delectus. Eligendi nihil perspiciatis dolor ducimus, iste cumque.</p>
-	</article>
 
+	<!-- contenido secundario de la página -->
+    <article>
+		<h3>Titulo menos importante</h3>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam enim, beatae quos fugiat repudiandae debitis velit. At, animi quis excepturi dicta accusantium non culpa nostrum sunt ducimus vero eos laborum.</p>
+	</article>
+	
 
 	<!-- pie de pagina -->
 	<footer>
 		<br/><br/><br/>
-		<div>&copy; 2021 <a href="https://carlosboni.com" target="_blank">Prof. Carlos Boni</a></div>
+		<div>&#169; 2021 <a href="https://carlosboni.com" target="_blank">Prof. Carlos Boni</a></div>
 	</footer>
 
 	<script>
