--- a/Lenguaja de marcas/mIprmerapagina-xhtmi.xhtml
+++ b/Lenguaja de marcas/mIprmerapagina-xhtmi.xhtml
@@ -4,7 +4,7 @@
   <html lang="es" xml:lang="es" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>1ºpaginaweb</title>
 
     <style>
@@ -83,15 +83,10 @@
         Tenemos demasiadas normas en la vida para casi
         todo Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, delectus aspernatur non repellendus
         libero vel facilis quibusdam adipisci accusamus reiciendis pariatur, architecto culpa incidunt sapiente alias
-        laborum ipsa? Ipsa, placeat.
-    <p id="segundoparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam earum eum qui? Quasi hic,
-        veritatis cupiditate soluta sunt et molestias non adipisci ullam obcaecati magnam quis eum dolorem, cumque
-        accusamus!
-    <div id="caja1"><img src="delfin.jpg" alt="un delfin jugando">
+        laborum ipsa? Ipsa, placeat.</p>
+    <p id= "segundoparrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae esse, ex corrupti consectetur ad in nihil quaerat pariatur nemo at tempora voluptatibus animi, unde, eaque quam ea inventore hic provident.</p>
+    <div id= "caja1"><img src="delfin.jpg" alt="un delfin jugando"/>
     </div>
-
-   
-
 </body>
 
 </html>
