--- a/Modelos/Esquema.html
+++ b/Modelos/Esquema.html
@@ -101,6 +101,14 @@
                El panda: Tiene un pelaje erizado y de color pardo y llevan en la cabeza una máscara blanca.
             </figcaption>
             </div>
+
+            <picture>
+                <source media="(max-width: 799px)" srcset="perro.gif">
+                <source media="(min-width: 800px)" srcset="perro.jpg">
+                <source media="(min-width: 800px)" srcset="perro.png">
+                <img src="elva-800w.jpg" alt="Chris standing up holding his daughter Elva">
+
+            </picture>
 </body>
 
 </html>
