--- a/Lenguaja de marcas/Fotos-formatos/UnaFoto.html
+++ b/Lenguaja de marcas/Fotos-formatos/UnaFoto.html
@@ -23,10 +23,10 @@
             background-color:rgba(0, 0, 0,0.3);
         }
 
-        #img {
+        #img {/* 
             width: 100%;
             height: 100%;
-			object-fit:cover;
+			object-fit:cover; */
         }
     </style>
 </head>
@@ -36,7 +36,15 @@
         
    
         <picture>
-            <img  />
+            <img
+                 srcset="horizontal-peque.webp 600w,
+                horizontal-mediana.webp 1200w,
+                horizontal-grande.webp 1920w"
+                sizes="(max-width: 600px) 280px,
+                (max-width: 1200px) 440px,
+                800px"
+                 src="grande-72dpi-80calidad.jpg" alt=" Paseo en primavera  ">
+            
         </picture>
 
     </div>
