--- a/Lenguaja de marcas/Fotos-formatos/unacaja.html
+++ b/Lenguaja de marcas/Fotos-formatos/unacaja.html
@@ -21,7 +21,7 @@
             height:100%;
             object-fit:cover;}
 
-        @media screen and (orientation:landscape) {
+        @media screen and (orientation:portrait) {
             #caja {
             width: 200px;
             height: 400px; 
