--- a/Lenguaja de marcas/24_noviembre_Repaso.html
+++ b/Lenguaja de marcas/24_noviembre_Repaso.html
@@ -50,6 +50,10 @@
             color: white; 
 
          }
+         @media screen and (orietation:portrait)and (max-width:380px){
+             #contenido{
+             flex-direction:column;
+         }
     </style>
 </head>
 <body>
