--- a/Lenguaja de marcas/Fotos-formatos/trasparecia.html
+++ b/Lenguaja de marcas/Fotos-formatos/trasparecia.html
@@ -22,6 +22,9 @@
             top:0px;
             left:0px;
         }
+        img:hover{
+         opacity:1;   
+        }
         #radiografia {
             width:100%;
             height:100%;
