--- a/Lenguaja de marcas/Fotos-formatos/trasparecia.html
+++ b/Lenguaja de marcas/Fotos-formatos/trasparecia.html
@@ -25,6 +25,9 @@
         img:hover{
          opacity:1;   
         }
+        img:active{
+        display: none;
+        }
         #radiografia {
             width:100%;
             height:100%;
