--- a/Lenguaja de marcas/Cajas-Paso2.html
+++ b/Lenguaja de marcas/Cajas-Paso2.html
@@ -19,7 +19,7 @@
 
 		#caja1{
 			display: inline-block;
-			background-color: blue;
+			background-color: rgb(197, 18, 72);
 			height: 50px;
 			width: 50px;
 			margin-left: 100px;
@@ -28,7 +28,7 @@
 		}
 		#caja2{
 			display: inline-block;
-			background-color: rgb(252, 14, 14);
+			background-color: rgb(54, 67, 189);;
 			height: 100px;
 			width: 100px;
 			margin-left: 20px;
@@ -37,7 +37,7 @@
 		}
 		#caja3{
 			display: inline-block;
-			background-color: rgb(220, 243, 10);
+			background-color: rgb(197, 230, 14);
 			height: 250px;
 			width: 200px;
 			margin-left: 20px;
