--- a/Lenguaja de marcas/Gatito.xhtml
+++ b/Lenguaja de marcas/Gatito.xhtml
@@ -51,7 +51,7 @@
         }
 
         img {
-           align-content: center;
+            text-align: center;
             width: 200pt;
             height:200pt;
             
